feat: isolate webhooks by application
